Bug:75262 Fix layout issues in attach mail and contact.
* increase width of mails / contacts table to 100%
* increase margin between top menu bar and the rest
* aligned buttons in top bar added some padding between search input and buttons
* aligned contact persons in IE
* adjusted mail row size to fit content

Screenshot attached.

http://bugzilla.zimbra.com/show_bug.cgi?id=75262

--- a/Zimlet/src/zimlet/com_zimbra_attachcontacts/attachcontacts.css
+++ b/Zimlet/src/zimlet/com_zimbra_attachcontacts/attachcontacts.css
@@ -18,4 +18,5 @@ table.AttachContacts_table input[type="text"]{
     border-width: 1px 0;
     cursor: pointer;
     border-color: #E0E0E0;
+    padding: 3px 0;
 }
