--- a/Zimlet/src/zimlet/com_zimbra_attachmail/attachmail.css
+++ b/Zimlet/src/zimlet/com_zimbra_attachmail/attachmail.css
@@ -11,11 +11,11 @@
 }
 
 .AttachMailRowDiv {
-    height: 90px;
     border-style: solid;
     border-width: 1px 0;
     cursor: pointer;
     border-color: #E0E0E0;
+    padding: 3px 0;
 }
 
 .AttachMailSubject {
@@ -33,4 +33,8 @@
 .AttachMailFrag {
     overflow: hidden;
     color: gray;
+}
+
+.AttachMailList .Row-selected, .AttachMailList .Row-focused{
+  border: none;
 }
